[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-pulse"
version = "0.1.0"
description = "Bridge Celery task lifecycle events to FastAPI SSE streams"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["fastapi", "celery", "sse", "events", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.100.0",
    "celery>=5.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
redis = ["aioredis>=2.0"]
rabbitmq = ["aio-pika>=9.0"]
all = ["aioredis>=2.0", "aio-pika>=9.0"]

[project.urls]
Repository = "https://github.com/rgreen1207/fastapi-pulse"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_pulse"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
